finished parallax for wallet

--- a/css/main.css
+++ b/css/main.css
@@ -269,6 +269,7 @@ textarea {
   position: relative;
 }
 .section-hero {
+  background: #26c6da;
   position: relative;
   height: 100vh;
   overflow: hidden;
@@ -278,11 +279,12 @@ textarea {
   position: absolute;
   right: 3em;
   top: 2em;
-  fill: #FFF;
+  fill: #ffffff;
+  z-index: 2;
 }
 .section-hero h1 {
   font-family: "Roboto", Lucinda, Helvetica;
-  color: #FFF;
+  color: #ffffff;
   right: 1em;
   font-size: 5em;
   top: 3em;
@@ -293,10 +295,13 @@ textarea {
   z-index: 200;
   position: absolute;
 }
+.section-kickstarter {
+  text-align: center;
+}
 .section-ar {
   border-top: 1em solid #ffdf32;
   position: relative;
-  height: 100vh;
+  height: auto;
 }
 .section-ar h1 {
   font-size: 3em;
@@ -507,9 +512,8 @@ textarea {
   /* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
   perspective: 2px;
 }
-.paralax-section {
+.parallax-section {
   /* Needed for children to be absolutely positioned relative to the parent. */
-  background: red;
   position: relative;
   /* The height of the container. Must be set, but it doesn't really matter what the value is. */
   height: 100vh;
@@ -519,6 +523,9 @@ textarea {
   justify-content: center;
   color: white;
   text-shadow: 0 0 5px #000;
+  position: absolute;
+  top: -220px;
+  left: -75px;
 }
 .parallax::after {
   /* Display and position the pseudo-element */
@@ -541,10 +548,20 @@ textarea {
 .static {
   background: red;
 }
-/* Sets the actual background images to adorable kitties. This part is crucial. */
+/* Sets the actual background images. This part is crucial. */
 .bg1::after {
   background-image: url('../img/wallor-guy.jpg');
+  z-index: 1;
 }
 .bg2::after {
-  background-image: url('https://placekitten.com/g/800/600');
+  background-image: url('../img/Wallet-shot1.png');
+  z-index: 1;
+  height: 550px;
+  width: 550px;
+  background-repeat: no-repeat;
+  transform: translateZ(0.34px) scale(1.5);
+  position: relative;
+  left: -210px;
+  top: -350px;
+  background-size: 100%;
 }
