--- a/less/sections.less
+++ b/less/sections.less
@@ -11,6 +11,7 @@
 			right: 3em;
 			top: 2em;
 			fill: @white;
+			z-index: 2;
 		}
 
 		h1 {
@@ -29,10 +30,14 @@
 		}
 	}
 
+	&-kickstarter {
+		text-align: center;
+	}
+
 	&-ar {
 		border-top: 1em solid rgba(255,223,50,1);
 		position: relative;
-		height: 100vh;
+		height: auto;
 
 		h1 {
 			font-size: 3em;
