tweaked parallax on wallet and phone images

--- a/less/parallax.less
+++ b/less/parallax.less
@@ -63,12 +63,24 @@
 .bg2::after {
   background-image: url('../img/Wallet-shot1.png');
   z-index: 1;
-  height: 550px;
-  width: 550px;
+  height: 540px;
+  width: 540px;
   background-repeat: no-repeat;
-  transform: translateZ(.34px) scale(1.5);
+  transform: translateZ(.285px) scale(1.5);
   position: relative;
-  left: -210px;
-  top: -350px;
+  left: -30px;
+  top: -280px;
   background-size: 100%;
+}
+
+.bg3::after {
+  background-image: url('../img/iphone-bg.png');
+  z-index: 1;
+  height: 100%;
+  width: 300px;
+  transform: translateZ(.215px) scale(2.35);
+  position: relative;
+  top: 795px;
+  left: 950px;
+  background-repeat: no-repeat;
 }
