--- a/less/sections.less
+++ b/less/sections.less
@@ -185,6 +185,10 @@
 			background: #1DE9B6;
 			height: 220px;
 
+		.right {
+			text-align: left;
+		}
+
 			h1 {
 				font-size: 72px;
 				font-family: @content-font;
