--- a/css/main.css
+++ b/css/main.css
@@ -427,6 +427,9 @@ textarea {
   background: #1DE9B6;
   height: 220px;
 }
+.section-planner .wide-title .right {
+  text-align: left;
+}
 .section-planner .wide-title h1 {
   font-size: 72px;
   font-family: "Roboto";
@@ -556,12 +559,23 @@ textarea {
 .bg2::after {
   background-image: url('../img/Wallet-shot1.png');
   z-index: 1;
-  height: 550px;
-  width: 550px;
+  height: 540px;
+  width: 540px;
   background-repeat: no-repeat;
-  transform: translateZ(0.34px) scale(1.5);
+  transform: translateZ(0.285px) scale(1.5);
   position: relative;
-  left: -210px;
-  top: -350px;
+  left: -30px;
+  top: -280px;
   background-size: 100%;
+}
+.bg3::after {
+  background-image: url('../img/iphone-bg.png');
+  z-index: 1;
+  height: 100%;
+  width: 300px;
+  transform: translateZ(0.215px) scale(2.35);
+  position: relative;
+  top: 795px;
+  left: 950px;
+  background-repeat: no-repeat;
 }
