--- a/less/parallax.less
+++ b/less/parallax.less
@@ -64,12 +64,12 @@
   background-image: url('../img/Wallet-shot1.png');
   z-index: 1;
   height: 540px;
-  width: 540px;
+  width: 600px;
   background-repeat: no-repeat;
-  transform: translateZ(.285px) scale(1.5);
+  transform: translateZ(.285px) scale(1.43);
   position: relative;
   left: -30px;
-  top: -280px;
+  top: -300px;
   background-size: 100%;
 }
 
@@ -80,7 +80,19 @@
   width: 300px;
   transform: translateZ(.215px) scale(2.35);
   position: relative;
-  top: 795px;
+  top: 900px;
   left: 950px;
+  background-repeat: no-repeat;
+}
+
+.bg4::after {
+  background-image: url('../img/Phone-side1.png');
+  z-index: 1;
+  height: 500px;
+  width: 500px;
+  transform: translateZ(.215px) scale(2.35);
+  position: relative;
+  top: 108px;
+  left: 475px;
   background-repeat: no-repeat;
 }
