--- a/less/variables.less
+++ b/less/variables.less
@@ -5,3 +5,7 @@
 /* colors */
 @cyan: #26C6DA;
 @white: #FFF;
+
+//custom colors defined in affinity pageview
+@gps-color: ;
+@gps-text-color: #1DE9B6;
