--- a/less/parallax.less
+++ b/less/parallax.less
@@ -57,6 +57,7 @@
 /* Sets the actual background images. This part is crucial. */
 .bg1::after {
   background-image: url('../img/wallor-guy.jpg');
+  background-repeat: no-repeat;
   z-index: 1;
 }
 
@@ -74,11 +75,11 @@
 }
 
 .bg3::after {
-  background-image: url('../img/iphone-bg.png');
+  background-image: url('../img/phone-demo-small.png');
   z-index: 1;
   height: 100%;
   width: 300px;
-  transform: translateZ(.215px) scale(2.35);
+  transform: translateZ(.215px) scale(2.345);
   position: relative;
   top: 900px;
   left: 950px;
@@ -88,11 +89,12 @@
 .bg4::after {
   background-image: url('../img/Phone-side1.png');
   z-index: 1;
-  height: 500px;
-  width: 500px;
+  height: 350px;
+  width: 555px;
   transform: translateZ(.215px) scale(2.35);
   position: relative;
-  top: 108px;
-  left: 475px;
+  left: 535px;
+  top: -170px;
+
   background-repeat: no-repeat;
 }
