--- a/less/variables.less
+++ b/less/variables.less
@@ -9,3 +9,5 @@
 //custom colors defined in affinity pageview
 @gps-color: ;
 @gps-text-color: #1DE9B6;
+@alert-info-color: #78909C;
+@alert-description-color: #37474F;
