--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,9 @@
    ========================================================================== */
 html {
   color: #222;
-  font-size: 1em;
   line-height: 1.4;
+  font-family: "Roboto";
+  font-size: 1vw;
 }
 /*
  * Remove text-shadow in selection highlight:
@@ -270,23 +271,22 @@ textarea {
 }
 .section-hero {
   background: #26c6da;
-  position: relative;
-  height: 100vh;
+  height: 77em;
   overflow: hidden;
-  padding-bottom: 120px;
 }
 .section-hero .logo {
-  position: absolute;
-  right: 3em;
-  top: 2em;
+  position: relative;
+  left: 60rem;
+  top: 2rem;
   fill: #ffffff;
   z-index: 2;
+  width: 34rem;
 }
 .section-hero h1 {
   font-family: "Roboto", Lucinda, Helvetica;
   color: #ffffff;
   right: 1em;
-  font-size: 5em;
+  font-size: 4rem;
   top: 3em;
   text-align: right;
   font-weight: 700;
@@ -297,8 +297,7 @@ textarea {
 }
 .section-kickstarter {
   text-align: center;
-  margin-top: 30px;
-  margin-bottom: 45px;
+  margin: 15em;
 }
 .section-gps {
   margin-bottom: 250px;
@@ -315,6 +314,7 @@ textarea {
   border-top: 1em solid #ffdf32;
   position: relative;
   height: auto;
+  z-index: 2;
 }
 .section-ar h1 {
   font-size: 3em;
@@ -405,19 +405,58 @@ textarea {
   right: 50px;
   top: 680px;
 }
+.section-rfid {
+  margin: 200px;
+}
+.section-rfid .rfid-content {
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 3fr 3fr 1fr;
+  grid-gap: 0;
+}
+.section-rfid .rfid-info {
+  grid-column: 2;
+  text-align: left;
+  margin: 50px;
+}
+.section-rfid .rfid-info h1 {
+  color: #1de9b6;
+  margin: 0;
+  font-size: 95px;
+}
+.section-rfid .rfid-info h2 {
+  color: #78909c;
+  font-weight: 100;
+  margin: 0;
+  font-size: 60px;
+  position: relative;
+  top: -20px;
+}
+.section-rfid .rfid-info p {
+  font-size: 44px;
+}
+.section-rfid .rfid-img {
+  grid-column: 3;
+  margin: 50px;
+}
+.section-wood .img {
+  width: 100%;
+}
 .section-tracking {
-  height: 80vh;
+  height: 70em;
 }
 .section-tracking .wide-title {
   background: #FFEA00;
-  height: 220px;
+  height: 13em;
 }
 .section-tracking .wide-title h1 {
-  font-size: 72px;
+  font-size: 3.8rem;
   font-family: "Roboto";
   text-transform: uppercase;
   font-weight: 400;
   text-align: right;
+  padding-top: 0.39em;
+  padding-bottom: .35em;
 }
 .section-tracking .inner-content img {
   position: absolute;
@@ -425,13 +464,12 @@ textarea {
   left: -300px;
 }
 .section-tracking .inner-content p {
-  font-size: 48px;
-  font-family: "Roboto";
+  font-size: 3rem;
   display: block;
-  width: 850px;
+  width: 55%;
   float: right;
   text-align: right;
-  margin-top: 200px;
+  margin-top: 3em;
 }
 .section-alerts {
   background-image: url('../img/bg-blurr-ar.jpg');
@@ -520,6 +558,7 @@ textarea {
   text-align: center;
   font-family: "Roboto";
   font-weight: 100;
+  margin-bottom: 50px;
 }
 .section-leather h1 {
   font-weight: 150;
@@ -528,6 +567,9 @@ textarea {
 }
 .section-leather i {
   margin-right: 35px;
+}
+.section-leather img {
+  width: 100%;
 }
 .section-leather .half {
   display: inline-block;
@@ -549,21 +591,34 @@ textarea {
 }
 .section-planner {
   height: 80vh;
-  margin-bottom: 255px;
 }
 .section-planner .wide-title {
-  background: #1DE9B6;
-  height: 220px;
+  background: #1de9b6;
+  height: 13em;
 }
 .section-planner .wide-title h1 {
-  font-size: 72px;
+  font-size: 3.8rem;
   font-family: "Roboto";
   text-transform: uppercase;
   font-weight: 400;
   text-align: left;
-  color: #101B2A;
+  padding-top: 0.39em;
+  padding-bottom: .35em;
 }
-.section-planner .phone-simulation {
+.section-planner .inner-content img {
+  position: absolute;
+  top: -300px;
+  left: -300px;
+}
+.section-planner .inner-content p {
+  font-size: 3.25rem;
+  display: block;
+  width: 45.5%;
+  float: left;
+  text-align: left;
+  margin-top: 3em;
+}
+.section .phone-simulation {
   background: url(../img/Distance_battery.png) no-repeat;
   width: 765px;
   height: 1400px;
@@ -572,7 +627,7 @@ textarea {
   left: 0;
   top: -60px;
 }
-.section-planner .phone-simulation .phone-content {
+.section .phone-simulation .phone-content {
   background: url(../img/ar-background.png) no-repeat;
   width: 555px;
   height: 1190px;
@@ -581,7 +636,7 @@ textarea {
   top: 97px;
   border-radius: 53px;
 }
-.section-planner .phone-simulation .phone-content .iphone-top {
+.section .phone-simulation .phone-content .iphone-top {
   background: url(../img/Notch-dot.png) no-repeat;
   background-size: contain;
   margin: 0 auto;
@@ -591,7 +646,7 @@ textarea {
   top: -1px;
   left: 120px;
 }
-.section-planner .phone-simulation .phone-content .device-title {
+.section .phone-simulation .phone-content .device-title {
   font-family: "Roboto";
   font-size: 120px;
   color: #FFF;
@@ -601,33 +656,29 @@ textarea {
   top: 400px;
   position: absolute;
 }
-.section-planner .phone-simulation .phone-content .device-title.passport {
+.section .phone-simulation .phone-content .device-title.passport {
   color: #40C4FF;
   opacity: 0;
 }
-.section-planner .phone-simulation .phone-content .device-title.keys {
+.section .phone-simulation .phone-content .device-title.keys {
   color: #FFD600;
 }
-.section-planner .phone-simulation .phone-content .device-title.wallet {
+.section .phone-simulation .phone-content .device-title.wallet {
   color: #1DE9B6;
   opacity: 0;
 }
-.section-planner .phone-simulation .phone-content .device-title.cards {
+.section .phone-simulation .phone-content .device-title.cards {
   color: #EC407A;
   opacity: 0;
 }
-.section-planner .phone-simulation .phone-content .device-location {
+.section .phone-simulation .phone-content .device-location {
   font-size: 90px;
   position: absolute;
 }
-.section-planner .phone-simulation .phone-content .device-location.keys {
+.section .phone-simulation .phone-content .device-location.keys {
   color: rgba(252, 228, 99, 0.6);
   right: 50px;
   top: 680px;
-}
-.inner-content p {
-  font-size: 48px;
-  font-family: "Roboto";
 }
 .left {
   position: relative;
@@ -635,13 +686,11 @@ textarea {
 }
 .right {
   position: relative;
-  right: -100px;
+  right: 2em;
 }
-.text-box {
-  width: 700px;
-  height: auto;
+.left {
   position: relative;
-  top: 90px;
+  left: 2em;
 }
 .gps-content {
   background-color: #051029;
@@ -702,7 +751,7 @@ textarea {
   /* Move the pseudo-element back away from the camera,
    * then scale it back up to fill the viewport.
    * Because the pseudo-element is further away, it appears to move more slowly, like in real life. */
-  transform: translateZ(-1px) scale(1.5);
+  transform: translateZ(-1px) scale(1.6);
   /* Force the background image to fill the whole element. */
   background-size: 100%;
   /* Keep the image from overlapping sibling elements. */
@@ -717,28 +766,29 @@ textarea {
   background-image: url('../img/wallor-guy.jpg');
   background-repeat: no-repeat;
   z-index: 1;
+  transform: translateZ(-1.2px) scale(1.6);
 }
 .bg2::after {
-  background-image: url('../img/Wallet-shot1.png');
+  background-image: url(../img/Wallet-shot1.png);
   z-index: 1;
-  height: 540px;
-  width: 600px;
+  height: 35em;
+  width: 35em;
   background-repeat: no-repeat;
-  transform: translateZ(0.285px) scale(1.43);
-  position: relative;
-  left: -30px;
-  top: -300px;
+  transform: translateZ(0.3px) scale(1.3);
+  position: absolute;
+  left: 220px;
+  top: -70px;
   background-size: 100%;
 }
 .bg3::after {
   background-image: url('../img/phone-demo-small.png');
   z-index: 1;
   height: 100%;
-  width: 300px;
+  width: 18em;
   transform: translateZ(0.215px) scale(2.345);
   position: relative;
   top: 900px;
-  left: 950px;
+  left: 66em;
   background-repeat: no-repeat;
 }
 .bg4::after {
