--- a/less/parallax.less
+++ b/less/parallax.less
@@ -41,7 +41,7 @@
   /* Move the pseudo-element back away from the camera,
    * then scale it back up to fill the viewport.
    * Because the pseudo-element is further away, it appears to move more slowly, like in real life. */
-  transform: translateZ(-1px) scale(1.5);
+  transform: translateZ(-1px) scale(1.6);
   /* Force the background image to fill the whole element. */
   background-size: 100%;
   /* Keep the image from overlapping sibling elements. */
@@ -59,18 +59,20 @@
   background-image: url('../img/wallor-guy.jpg');
   background-repeat: no-repeat;
   z-index: 1;
+  transform: translateZ(-1.2px) scale(1.6);
+
 }
 
 .bg2::after {
-  background-image: url('../img/Wallet-shot1.png');
+  background-image: url(../img/Wallet-shot1.png);
   z-index: 1;
-  height: 540px;
-  width: 600px;
+  height: 35em;
+  width: 35em;
   background-repeat: no-repeat;
-  transform: translateZ(.285px) scale(1.43);
-  position: relative;
-  left: -30px;
-  top: -300px;
+  transform: translateZ(0.3px) scale(1.3);
+  position: absolute;
+  left: 220px;
+  top: -70px;
   background-size: 100%;
 }
 
@@ -78,11 +80,11 @@
   background-image: url('../img/phone-demo-small.png');
   z-index: 1;
   height: 100%;
-  width: 300px;
+  width: 18em;
   transform: translateZ(.215px) scale(2.345);
   position: relative;
   top: 900px;
-  left: 950px;
+  left: 66em;
   background-repeat: no-repeat;
 }
 
