--- a/less/reset.less
+++ b/less/reset.less
@@ -12,8 +12,9 @@
 
 html {
     color: #222;
-    font-size: 1em;
     line-height: 1.4;
+    font-family: @content-font;
+    font-size: 1vw;
 }
 
 /*
