--- a/less/sections.less
+++ b/less/sections.less
@@ -1,17 +1,16 @@
 .section {
 	&-hero {
 		background: @cyan;
-		position: relative;
-		height: 100vh;
+		height: 77em;
 		overflow: hidden;
-		padding-bottom: 120px;
 
 		.logo {
-			position: absolute;
-			right: 3em;
-			top: 2em;
+			position: relative;
+			left: 60rem;
+			top: 2rem;
 			fill: @white;
 			z-index: 2;
+			width: 34rem;
 		}
 
 		h1 {
@@ -19,7 +18,8 @@
 			color: @white;
 			position: absolute;
 			right: 1em;
-			font-size: 5em;
+			//font-size: 5em;
+			font-size: 4rem;
 			top: 3em;
 			text-align: right;
 			font-weight: 700;
@@ -32,9 +32,7 @@
 
 	&-kickstarter {
 		text-align: center;
-		margin-top: 30px;
-		margin-bottom: 45px;
-
+		margin: 15em;
 	}
 
 	//custom class added for gps styling
@@ -56,6 +54,7 @@
 		border-top: 1em solid rgba(255,223,50,1);
 		position: relative;
 		height: auto;
+		z-index: 2;
 
 		h1 {
 			font-size: 3em;
@@ -162,21 +161,71 @@
 	}
 
 	&-rfid {
-		
+		margin: 200px;
+
+		.rfid-content {
+			text-align: center;
+			display: grid;
+			grid-template-columns: 1fr 3fr 3fr 1fr;
+			grid-gap: 0;
+		}
+
+		.rfid-info {
+			// display: inline-block;
+			grid-column: 2;
+			text-align: left;
+			margin: 50px;
+
+			h1 {
+				color: @gps-text-color;
+				margin: 0;
+				font-size: 95px;
+			}
+
+			h2 {
+				color: @alert-info-color;
+				font-weight: 100;
+				margin: 0;
+				font-size: 60px;
+				position: relative;
+				top: -20px;
+			}
+
+			p {
+				font-size: 44px;
+			}
+
+
+		}
+
+		.rfid-img {
+			// display: inline-block;
+			grid-column: 3;
+			margin: 50px;
+		}
+	}
+
+	&-wood {
+
+		.img {
+			width: 100%;
+		}
 	}
 
 	&-tracking {
-		height: 80vh;
+		height: 70em;
 		.wide-title {
 			background: #FFEA00;
-			height: 220px;
+			height: 13em;
 
 			h1 {
-				font-size: 72px;
+				font-size: 3.8rem;
 				font-family: @content-font;
 				text-transform: uppercase;
 				font-weight: 400;
 				text-align: right;
+				padding-top: 0.39em;
+		    padding-bottom: .35em;
 			}
 
 		}
@@ -189,13 +238,12 @@
 			}
 
 			p {
-				font-size: 48px;
-				font-family: @content-font;
-				display: block;
-				width: 850px;
-				float: right;
-				text-align: right;
-				margin-top: 200px;
+				font-size: 3rem;
+		    display: block;
+		    width: 55%;
+		    float: right;
+		    text-align: right;
+		    margin-top: 3em;
 			}
 		}
 	}
@@ -318,6 +366,7 @@
 		text-align: center;
 		font-family: @content-font;
 		font-weight: 100;
+		margin-bottom: 50px;
 
 		h1 {
 			font-weight: 150;
@@ -327,6 +376,10 @@
 
 		i {
 			margin-right: 35px;
+		}
+
+		img {
+			width: 100%;
 		}
 
 		.half {
@@ -355,20 +408,38 @@
 	}
 
 	&-planner {
-		height: 80vh;
-		margin-bottom: 255px;
+			height: 80vh;
+			.wide-title {
+				background: @gps-text-color;
+				height: 13em;
 
-		.wide-title {
-			background: #1DE9B6;
-			height: 220px;
+				h1 {
+					font-size: 3.8rem;
+					font-family: @content-font;
+					text-transform: uppercase;
+					font-weight: 400;
+					text-align: left;
+					padding-top: 0.39em;
+					padding-bottom: .35em;
+				}
 
-			h1 {
-				font-size: 72px;
-				font-family: @content-font;
-				text-transform: uppercase;
-				font-weight: 400;
-				text-align: left;
-				color: #101B2A;
+			}
+
+			.inner-content {
+				img {
+					position: absolute;
+					top: -300px;
+					left: -300px;
+				}
+
+				p {
+					font-size: 3.25rem;
+					display: block;
+					width: 45.5%;
+					float: left;
+					text-align: left;
+					margin-top: 3em;
+				}
 			}
 		}
 		.phone-simulation {
@@ -445,15 +516,15 @@
 		}
 
 	}
-}
 
-		.inner-content {
 
-			p {
-				font-size: 48px;
-				font-family: @content-font;
-			}
-		}
+		// .inner-content {
+		//
+		// 	p {
+		// 		font-size: 48px;
+		// 		font-family: @content-font;
+		// 	}
+		// }
 
 
 //my custom styles
@@ -464,15 +535,26 @@
 
 .right {
 	position: relative;
-	right: -100px;
+	right: 2em;
 }
 
-.text-box {
-	width: 700px;
-	height: auto;
+.left {
 	position: relative;
-	top: 90px;
+	left: 2em;
 }
+
+// .text-box {
+// 	width: 700px;
+// 	height: auto;
+// 	position: relative;
+// 	top: 90px;
+// 	right: -2em;
+//
+// 	p {
+// 		font-size: 3rem;
+// 	}
+//
+// }
 
 .gps-content {
 	background-color: hsl(221, 80%, 9%);
