--- a/css/main.css
+++ b/css/main.css
@@ -680,6 +680,19 @@ textarea {
   right: 50px;
   top: 680px;
 }
+-wirelesscharging {
+  background-color: black;
+}
+-wirelesscharging h1 {
+  font-size: 20rem;
+  color: #1de9b6;
+}
+-powerbank h1 {
+  font-size: 30rem;
+}
+-powerbank img {
+  width: 100%;
+}
 .left {
   position: relative;
   left: -250px;
@@ -695,8 +708,8 @@ textarea {
 .gps-content {
   background-color: #051029;
   text-align: right;
-  padding-right: 480px;
-  padding-top: 50px;
+  padding-right: 20em;
+  padding-top: 3em;
 }
 .gps-title {
   color: #1de9b6;
@@ -713,92 +726,4 @@ textarea {
   margin-top: 0;
   position: relative;
   top: -15px;
-}
-.parallax-wrapper {
-  /* The height needs to be set to a fixed value for the effect to work.
-   * 100vh is the full height of the viewport. */
-  height: 100vh;
-  /* The scaling of the images would add a horizontal scrollbar, so disable x overflow. */
-  overflow-x: hidden;
-  /* Enable scrolling on the page. */
-  overflow-y: auto;
-  /* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
-  perspective: 2px;
-}
-.parallax-section {
-  /* Needed for children to be absolutely positioned relative to the parent. */
-  position: relative;
-  /* The height of the container. Must be set, but it doesn't really matter what the value is. */
-  height: 100vh;
-  /* For text formatting. */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  text-shadow: 0 0 5px #000;
-  position: absolute;
-  top: -220px;
-  left: -75px;
-}
-.parallax::after {
-  /* Display and position the pseudo-element */
-  content: " ";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  /* Move the pseudo-element back away from the camera,
-   * then scale it back up to fill the viewport.
-   * Because the pseudo-element is further away, it appears to move more slowly, like in real life. */
-  transform: translateZ(-1px) scale(1.6);
-  /* Force the background image to fill the whole element. */
-  background-size: 100%;
-  /* Keep the image from overlapping sibling elements. */
-  z-index: -1;
-}
-/* The styling for the static div. */
-.static {
-  background: red;
-}
-/* Sets the actual background images. This part is crucial. */
-.bg1::after {
-  background-image: url('../img/wallor-guy.jpg');
-  background-repeat: no-repeat;
-  z-index: 1;
-  transform: translateZ(-1.2px) scale(1.6);
-}
-.bg2::after {
-  background-image: url(../img/Wallet-shot1.png);
-  z-index: 1;
-  height: 35em;
-  width: 35em;
-  background-repeat: no-repeat;
-  transform: translateZ(0.3px) scale(1.3);
-  position: absolute;
-  left: 220px;
-  top: -70px;
-  background-size: 100%;
-}
-.bg3::after {
-  background-image: url('../img/phone-demo-small.png');
-  z-index: 1;
-  height: 100%;
-  width: 18em;
-  transform: translateZ(0.215px) scale(2.345);
-  position: relative;
-  top: 900px;
-  left: 66em;
-  background-repeat: no-repeat;
-}
-.bg4::after {
-  background-image: url('../img/Phone-side1.png');
-  z-index: 1;
-  height: 350px;
-  width: 555px;
-  transform: translateZ(0.215px) scale(2.35);
-  position: relative;
-  left: 535px;
-  top: -170px;
-  background-repeat: no-repeat;
 }
