--- a/less/sections.less
+++ b/less/sections.less
@@ -34,7 +34,6 @@
 		text-align: center;
 		margin: 15em;
 	}
-
 	//custom class added for gps styling
 	&-gps {
 		margin-bottom: 250px;
@@ -517,17 +516,37 @@
 
 	}
 
+	&-wirelesscharging {
+		background-color: black;
 
-		// .inner-content {
-		//
-		// 	p {
-		// 		font-size: 48px;
-		// 		font-family: @content-font;
-		// 	}
-		// }
+		h1 {
+			font-size: 20rem;
+			color: @gps-text-color;
+		}
+	}
+
+	&-powerbank {
+		h1 {
+			font-size: 30rem;
+		}
+		img {
+			width: 100%
+		}
+	}
 
 
-//my custom styles
+
+
+
+
+
+
+
+
+
+
+
+
 .left {
 	position: relative;
 	left: -250px;
@@ -559,8 +578,8 @@
 .gps-content {
 	background-color: hsl(221, 80%, 9%);
 	text-align: right;
-	padding-right: 480px;
-	padding-top: 50px;
+	padding-right: 20em;
+	padding-top: 3em;
 }
 
 .gps-title {
