--- a/less/reset.less
+++ b/less/reset.less
@@ -9,15 +9,17 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
-
 html {
     color: #222;
     line-height: 1.4;
     font-family: @content-font;
     font-size: 1vw;
+    width: 100%;
+    overflow-x: hidden;
 }
 
-/*
+/*HKEY_CURRENT_USER\Software\Microsoft\ Windows\CurrentVersion\Policies\Explorer
+
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
  *
