--- a/less/sections.less
+++ b/less/sections.less
@@ -290,117 +290,161 @@
 	}
 
 	&-alerts {
+		height: auto;
 		background-image: url('../img/bg-blurr-ar.jpg');
 		background-position: bottom;
 
 		.inner-content {
-			max-width: 100%;
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			height: 100%;
 
-			.alert-half {
-				width: 50%;
+			h1 {
+				color: @gps-text-color;
+				font-size: 5.4rem;
+				font-weight: 700;
+				font-family: @content-font;
+				margin:0;
+			}
 
-				&.left-alert {
+			h2 {
+				margin: 0;
+				position: relative;
+				top: -0.4em;
+				color: #78909C;
+				font-family: @content-font;
+				font-size: 3.8rem;
+				font-weight: 650;
+			}
 
+			h3 {
+				position: relative;
+				top: -1.2em;
+				color: #101B2A;
+				font-family: @content-font;
+				font-size: 2.85rem;
+				font-weight: 250;
+			}
+			.half {
+				width: 100%;
 
+				.titles {
+					margin: auto;
+					text-align: left;
+					padding-left: 15em;
+					padding-top: 8em;
 
-					.alert-titles {
-						margin-left: 50px;
-
-						// display: inline-block;
-						p {
-							font-size: 30px;
-							font-weight: 100;
-							margin: 0;
-							margin-left: 30px;
-							color: @alert-info-color;
-						}
-
-						.title-line1 {
-							position: relative;
-							top: -50px;
-						}
-
-						.title-line2 {
-							position: relative;
-							top: -85px;
-						}
-
-						.alert-title1 {
-							color: @gps-text-color;
-							font-size: 90px;
-							font-weight: 700;
-							font-family: @content-font;
-							margin-bottom: 0;
-							margin-left: 45px;
-							margin-right: 45px;
-						}
-
-						.alert-title2 {
-							display: inline-block;
-							margin: 0;
-							color: #78909C;
-							font-family: @content-font;
-							font-size: 68px;
-							font-weight: 650;
-							margin-left: 45px;
-							margin-right: 45px;
-							width: 424.5px;
-						}
-
-						.alert-title3 {
-							display: inline-block;
-							margin: 0;
-							color: #101B2A;
-							font-family: @content-font;
-							font-size: 55px;
-							font-weight: 250;
-							margin-left: 45px;
-							margin-right: 45px;
-							width: 424.5px;
-						}
-					}
-
-					.alert-font-descriptor {
-						display: inline-block;
-						position: relative;
-						top: -50px;
-						margin-bottom: 70px;
-						// top: -500px;
-
-						p {
-							display: inline-block;
-							margin: 0;
-							// font-size: 40px;
-							position: relative;
-						}
-					}
-
-
-					.alert-description-box {
-						font-size: 48px;
-						font-family: @content-font;
-						width: 125px;
-						height: 500px;
-						text-align: right;
-
-
-						p {
-							font-size: 55px;
-							margin-top: 300px;
-							font-family: @content-font;
-							color: @alert-description-color;
-							}
-							// position: relative;
-							// right: 50px;
-						}
-
+					h1, h2, h3 {
+						margin: 0;
+						padding: 0;
 					}
 				}
 
-			  &.right-alert {
+				.alert-description-box {
+					margin-top: 2em;
+					width: 39%;
+					float: right;
+					font-size: 3.8rem;
+					text-align: right;
+					color: @alert-description-color;
+				}
 
+				img {
+					width: 100%;
+					margin:0 auto;
+					transform: scale(1.3);
 				}
 			}
+		}
+
+		// .inner-content {
+		// 	max-width: 100%;
+		//
+		// 	.alert-half {
+		// 		width: 50%;
+		//
+		// 		&.left-alert {
+		//
+		//
+		//
+
+		//
+		// 				.alert-title1 {
+		// 					color: @gps-text-color;
+		// 					font-size: 90px;
+		// 					font-weight: 700;
+		// 					font-family: @content-font;
+		// 					margin-bottom: 0;
+		// 					margin-left: 45px;
+		// 					margin-right: 45px;
+		// 				}
+		//
+		// 				.alert-title2 {
+		// 					display: inline-block;
+		// 					margin: 0;
+		// 					color: #78909C;
+		// 					font-family: @content-font;
+		// 					font-size: 68px;
+		// 					font-weight: 650;
+		// 					margin-left: 45px;
+		// 					margin-right: 45px;
+		// 					width: 424.5px;
+		// 				}
+		//
+		// 				.alert-title3 {
+		// 					display: inline-block;
+		// 					margin: 0;
+		// 					color: #101B2A;
+		// 					font-family: @content-font;
+		// 					font-size: 55px;
+		// 					font-weight: 250;
+		// 					margin-left: 45px;
+		// 					margin-right: 45px;
+		// 					width: 424.5px;
+		// 				}
+		// 			}
+		//
+		// 			.alert-font-descriptor {
+		// 				display: inline-block;
+		// 				position: relative;
+		// 				top: -50px;
+		// 				margin-bottom: 70px;
+		// 				// top: -500px;
+		//
+		// 				p {
+		// 					display: inline-block;
+		// 					margin: 0;
+		// 					// font-size: 40px;
+		// 					position: relative;
+		// 				}
+		// 			}
+		//
+		//
+		// 			.alert-description-box {
+		// 				font-size: 48px;
+		// 				font-family: @content-font;
+		// 				width: 125px;
+		// 				height: 500px;
+		// 				text-align: right;
+		//
+		//
+		// 				p {
+		// 					font-size: 55px;
+		// 					margin-top: 300px;
+		// 					font-family: @content-font;
+		// 					color: @alert-description-color;
+		// 					}
+		// 					// position: relative;
+		// 					// right: 50px;
+		// 				}
+		//
+		// 			}
+		// 		}
+		//
+		// 	  &.right-alert {
+		//
+		// 		}
+		// 	}
 	}
 
 	&-leather {
