further cleaned styles, bug fixes

--- a/less/reset.less
+++ b/less/reset.less
@@ -18,6 +18,10 @@ html {
     overflow-x: hidden;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /*HKEY_CURRENT_USER\Software\Microsoft\ Windows\CurrentVersion\Policies\Explorer
 
  * Remove text-shadow in selection highlight:
