--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,9 @@ html {
   width: 100%;
   overflow-x: hidden;
 }
+body {
+  overflow-x: hidden;
+}
 /*HKEY_CURRENT_USER\Software\Microsoft\ Windows\CurrentVersion\Policies\Explorer
 
  * Remove text-shadow in selection highlight:
@@ -308,7 +311,11 @@ textarea {
 }
 .section-kickstarter {
   text-align: center;
-  margin: 15em;
+  margin-top: 15em;
+  margin-bottom: 15em;
+}
+.section-kickstarter img {
+  width: 100%;
 }
 .section-gps {
   margin-bottom: 250px;
@@ -440,39 +447,128 @@ textarea {
   right: 50px;
   top: 680px;
 }
-.section-rfid {
-  margin: 200px;
+.section-planner {
+  height: 80vw;
 }
-.section-rfid .rfid-content {
-  text-align: center;
-  display: grid;
-  grid-template-columns: 1fr 3fr 3fr 1fr;
-  grid-gap: 0;
+.section-planner .wide-title {
+  background: #1de9b6;
+  height: 13em;
 }
-.section-rfid .rfid-info {
-  grid-column: 2;
+.section-planner .wide-title h1 {
+  font-size: 3.8rem;
+  font-family: "Roboto";
+  text-transform: uppercase;
+  font-weight: 400;
   text-align: left;
-  margin: 50px;
+  padding-top: 0.39em;
+  padding-bottom: .35em;
 }
-.section-rfid .rfid-info h1 {
-  color: #1de9b6;
-  margin: 0;
-  font-size: 95px;
+.section-planner .inner-content img {
+  position: absolute;
+  top: -43em;
+  left: 61em;
+  width: 34em;
 }
-.section-rfid .rfid-info h2 {
-  color: #78909c;
-  font-weight: 100;
-  margin: 0;
-  font-size: 60px;
+.section-planner .inner-content p {
+  font-size: 3.25rem;
+  display: block;
+  width: 45.5%;
+  float: left;
+  text-align: left;
+  margin-top: 3em;
+}
+.section-planner .phone-simulation {
+  background: url(../img/Distance_battery.png) no-repeat;
+  width: 765px;
+  height: 1400px;
+  background-size: cover;
+  position: absolute;
+  left: 0;
+  top: -60px;
+}
+.section-planner .phone-simulation .phone-content {
+  background: url(../img/ar-background.png) no-repeat;
+  width: 555px;
+  height: 1190px;
   position: relative;
-  top: -20px;
+  left: 100px;
+  top: 97px;
+  border-radius: 53px;
 }
-.section-rfid .rfid-info p {
-  font-size: 44px;
+.section-planner .phone-simulation .phone-content .iphone-top {
+  background: url(../img/Notch-dot.png) no-repeat;
+  background-size: contain;
+  margin: 0 auto;
+  width: 315px;
+  height: 80px;
+  position: absolute;
+  top: -1px;
+  left: 120px;
 }
-.section-rfid .rfid-img {
-  grid-column: 3;
-  margin: 50px;
+.section-planner .phone-simulation .phone-content .device-title {
+  font-family: "Roboto";
+  font-size: 120px;
+  color: #FFF;
+  text-transform: uppercase;
+  font-weight: 900;
+  left: -825px;
+  top: 400px;
+  position: absolute;
+}
+.section-planner .phone-simulation .phone-content .device-title.passport {
+  color: #40C4FF;
+  opacity: 0;
+}
+.section-planner .phone-simulation .phone-content .device-title.keys {
+  color: #FFD600;
+}
+.section-planner .phone-simulation .phone-content .device-title.wallet {
+  color: #1DE9B6;
+  opacity: 0;
+}
+.section-planner .phone-simulation .phone-content .device-title.cards {
+  color: #EC407A;
+  opacity: 0;
+}
+.section-planner .phone-simulation .phone-content .device-location {
+  font-size: 90px;
+  position: absolute;
+}
+.section-planner .phone-simulation .phone-content .device-location.keys {
+  color: rgba(252, 228, 99, 0.6);
+  right: 50px;
+  top: 680px;
+}
+.section-rfid .inner-content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 10em;
+}
+.section-rfid .inner-content .half {
+  margin: auto;
+}
+.section-rfid .inner-content .half h1,
+.section-rfid .inner-content .half h2,
+.section-rfid .inner-content .half p {
+  margin: 0;
+}
+.section-rfid .inner-content .half h1 {
+  color: #1de9b6;
+  font-size: 5.5rem;
+}
+.section-rfid .inner-content .half h2 {
+  font-size: 2.3rem;
+  font-weight: 100;
+  color: #78909c;
+  position: relative;
+  top: -1em;
+}
+.section-rfid .inner-content .half p {
+  font-size: 1.2rem;
+}
+.section-rfid .inner-content .half img {
+  width: 100%;
+  height: auto;
 }
 .section-wood .img {
   width: 100%;
@@ -567,142 +663,59 @@ textarea {
   margin: 0 auto;
   transform: scale(1.3);
 }
-.section-leather {
-  text-align: center;
-  font-family: "Roboto";
-  font-weight: 100;
-  margin-bottom: 50px;
+.section-leather img {
+  display: block;
+  margin: auto;
+  width: 100vw;
+  height: auto;
 }
 .section-leather h1 {
   font-weight: 150;
   font-size: 48px;
   margin-bottom: 0;
 }
-.section-leather i {
-  margin-right: 35px;
+.section-leather .info-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
-.section-leather img {
-  width: 100%;
+.section-leather .info-container .half {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
-.section-leather .half {
-  display: inline-block;
-  margin: 55px;
-  margin-top: 0;
+.section-leather .info-container .half i {
+  font-size: 120px;
+  margin: auto 0;
 }
-.section-leather .half .leather-words {
-  display: inline-block;
+.section-leather .info-container .half .leather-words {
+  text-align: left;
 }
-.section-leather .half p.subtitle {
+.section-leather .info-container .half .leather-words p {
   color: #78909c;
   font-size: 30px;
   text-align: left;
   margin: 0;
 }
-.section-leather .half .icon-leather-svgrepo-com,
-.section-leather .half .icon-meter-svgrepo-com {
-  font-size: 120px;
+.section-wireless-charging .inner-content .header {
+  padding-left: 9em;
 }
-.section-planner {
-  height: 80vw;
+.section-wireless-charging .inner-content .header h1,
+.section-wireless-charging .inner-content .header h2 {
+  margin: 0;
 }
-.section-planner .wide-title {
-  background: #1de9b6;
-  height: 13em;
-}
-.section-planner .wide-title h1 {
-  font-size: 3.8rem;
-  font-family: "Roboto";
-  text-transform: uppercase;
-  font-weight: 400;
-  text-align: left;
-  padding-top: 0.39em;
-  padding-bottom: .35em;
-}
-.section-planner .inner-content img {
-  position: absolute;
-  top: -43em;
-  left: 61em;
-  width: 34em;
-}
-.section-planner .inner-content p {
-  font-size: 3.25rem;
-  display: block;
-  width: 45.5%;
-  float: left;
-  text-align: left;
-  margin-top: 3em;
-}
-.section .phone-simulation {
-  background: url(../img/Distance_battery.png) no-repeat;
-  width: 765px;
-  height: 1400px;
-  background-size: cover;
-  position: absolute;
-  left: 0;
-  top: -60px;
-}
-.section .phone-simulation .phone-content {
-  background: url(../img/ar-background.png) no-repeat;
-  width: 555px;
-  height: 1190px;
-  position: relative;
-  left: 100px;
-  top: 97px;
-  border-radius: 53px;
-}
-.section .phone-simulation .phone-content .iphone-top {
-  background: url(../img/Notch-dot.png) no-repeat;
-  background-size: contain;
-  margin: 0 auto;
-  width: 315px;
-  height: 80px;
-  position: absolute;
-  top: -1px;
-  left: 120px;
-}
-.section .phone-simulation .phone-content .device-title {
-  font-family: "Roboto";
-  font-size: 120px;
-  color: #FFF;
-  text-transform: uppercase;
-  font-weight: 900;
-  left: -825px;
-  top: 400px;
-  position: absolute;
-}
-.section .phone-simulation .phone-content .device-title.passport {
-  color: #40C4FF;
-  opacity: 0;
-}
-.section .phone-simulation .phone-content .device-title.keys {
-  color: #FFD600;
-}
-.section .phone-simulation .phone-content .device-title.wallet {
-  color: #1DE9B6;
-  opacity: 0;
-}
-.section .phone-simulation .phone-content .device-title.cards {
-  color: #EC407A;
-  opacity: 0;
-}
-.section .phone-simulation .phone-content .device-location {
-  font-size: 90px;
-  position: absolute;
-}
-.section .phone-simulation .phone-content .device-location.keys {
-  color: rgba(252, 228, 99, 0.6);
-  right: 50px;
-  top: 680px;
-}
--wirelesscharging {
-  background-color: black;
-}
--wirelesscharging h1 {
-  font-size: 20rem;
+.section-wireless-charging .inner-content .header h1 {
   color: #1de9b6;
+  font-size: 3.5rem;
 }
--powerbank h1 {
-  font-size: 30rem;
+.section-wireless-charging .inner-content .header h2 {
+  font-size: 2rem;
+  color: #78909c;
+  text-transform: uppercase;
+  font-weight: 200;
+  position: relative;
+  top: -0.5em;
+}
+.section-powerbank {
+  background-color: red;
 }
 .left {
   position: relative;
