--- a/less/sections.less
+++ b/less/sections.less
@@ -45,7 +45,11 @@
 
 	&-kickstarter {
 		text-align: center;
-		margin: 15em;
+		margin-top: 15em;
+		margin-bottom: 15em;
+		img {
+			width: 100%;
+		}
 	}
 	//custom class added for gps styling
 	&-gps {
@@ -202,49 +206,154 @@
 		}
 	}
 
-	&-rfid {
-		margin: 200px;
+	&-planner {
+			height: 80vw;
+			// margin-bottom: 10px;
+			.wide-title {
+				background: @gps-text-color;
+				height: 13em;
 
-		.rfid-content {
-			text-align: center;
-			display: grid;
-			grid-template-columns: 1fr 3fr 3fr 1fr;
-			grid-gap: 0;
-		}
+				h1 {
+					font-size: 3.8rem;
+					font-family: @content-font;
+					text-transform: uppercase;
+					font-weight: 400;
+					text-align: left;
+					padding-top: 0.39em;
+					padding-bottom: .35em;
+				}
 
-		.rfid-info {
-			// display: inline-block;
-			grid-column: 2;
-			text-align: left;
-			margin: 50px;
-
-			h1 {
-				color: @gps-text-color;
-				margin: 0;
-				font-size: 95px;
 			}
 
-			h2 {
-				color: @alert-info-color;
-				font-weight: 100;
-				margin: 0;
-				font-size: 60px;
+			.inner-content {
+				img {
+					position: absolute;
+			    top: -43em;
+			    left: 61em;
+			    width: 34em;
+				}
+
+				p {
+					font-size: 3.25rem;
+					display: block;
+					width: 45.5%;
+					float: left;
+					text-align: left;
+					margin-top: 3em;
+				}
+			}
+		.phone-simulation {
+
+			background: url(../img/Distance_battery.png) no-repeat;
+			width: 765px;
+			height: 1400px;
+			background-size: cover;
+			position: absolute;
+			left: 0;
+    		top: -60px;
+
+			.phone-content {
+
+				background:url(../img/ar-background.png) no-repeat;
+				width: 555px;
+				height: 1190px;
 				position: relative;
-				top: -20px;
+				left: 100px;
+				top: 97px;
+				border-radius: 53px;
+
+
+				.iphone-top {
+					background: url(../img/Notch-dot.png) no-repeat;
+					background-size: contain;
+					margin: 0 auto;
+					width: 315px;
+					height: 80px;
+					position: absolute;
+					top: -1px;
+					left: 120px;
+				}
+
+				.device-title {
+					font-family: @content-font;
+					font-size: 120px;
+					color: #FFF;
+					text-transform: uppercase;
+					font-weight: 900;
+					left: -825px;
+					top: 400px;
+					position: absolute;
+
+					&.passport {
+						color: #40C4FF;
+						opacity: 0;
+					}
+
+					&.keys {
+						color: #FFD600;
+					}
+					&.wallet {
+						color: #1DE9B6;
+						opacity: 0;
+					}
+					&.cards {
+						color: #EC407A;
+						opacity: 0;
+					}
+				}
+
+				.device-location {
+					font-size: 90px;
+					position: absolute;
+
+					&.keys {
+						color: rgba(252, 228, 99, 0.6);
+						right: 50px;
+						top: 680px;
+					}
+				}
 			}
+		}
+	}
 
-			p {
-				font-size: 44px;
+	&-rfid {
+
+		.inner-content {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			padding: 10em;
+
+			.half {
+				margin: auto;
+
+				h1, h2, p {
+					margin: 0;
+				}
+
+				h1 {
+					color: @gps-text-color;
+					font-size: 5.5rem;
+				}
+
+				h2 {
+					font-size: 2.3rem;
+					font-weight: 100;
+					color: @alert-info-color;
+					position: relative;
+					top: -1em;
+				}
+
+				p {
+					font-size: 1.2rem;
+				}
+
+				img {
+					width: 100%;
+					height: auto;
+				}
 			}
-
-
 		}
 
-		.rfid-img {
-			// display: inline-block;
-			grid-column: 3;
-			margin: 50px;
-		}
 	}
 
 	&-wood {
@@ -448,10 +557,13 @@
 	}
 
 	&-leather {
-		text-align: center;
-		font-family: @content-font;
-		font-weight: 100;
-		margin-bottom: 50px;
+
+		img {
+			display: block;
+			margin: auto;
+			width: 100vw;
+			height: auto;
+		}
 
 		h1 {
 			font-weight: 150;
@@ -459,174 +571,183 @@
 			margin-bottom: 0;
 		}
 
-		i {
-			margin-right: 35px;
+		.info-container {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+
+			.half {
+				display: grid;
+				grid-template-columns: repeat(2, 1fr);
+
+				i {
+					font-size: 120px;
+					margin: auto 0;
+				}
+
+				.leather-words {
+					text-align: left;
+
+					p {
+						color: @alert-info-color;
+						font-size: 30px;
+						text-align: left;
+						margin: 0;
+					}
+				}
+			}
 		}
 
-		img {
-			width: 100%;
-		}
-
-		.half {
-			display: inline-block;
-			margin: 55px;
-			margin-top: 0;
-
-			.leather-words {
-				display: inline-block;
-			}
-
-			p.subtitle {
-				color: @alert-info-color;
-				font-size: 30px;
-				text-align: left;
-				margin: 0;
-			}
-
-			.icon-leather-svgrepo-com, .icon-meter-svgrepo-com {
-				font-size: 120px;
-			}
-
-
-		}
 
 	}
 
-	&-planner {
-			height: 80vw;
-			// margin-bottom: 10px;
-			.wide-title {
-				background: @gps-text-color;
-				height: 13em;
+	// &-planner {
+	// 		height: 80vw;
+	// 		// margin-bottom: 10px;
+	// 		.wide-title {
+	// 			background: @gps-text-color;
+	// 			height: 13em;
+	//
+	// 			h1 {
+	// 				font-size: 3.8rem;
+	// 				font-family: @content-font;
+	// 				text-transform: uppercase;
+	// 				font-weight: 400;
+	// 				text-align: left;
+	// 				padding-top: 0.39em;
+	// 				padding-bottom: .35em;
+	// 			}
+	//
+	// 		}
+	//
+	// 		.inner-content {
+	// 			img {
+	// 				position: absolute;
+	// 		    top: -43em;
+	// 		    left: 61em;
+	// 		    width: 34em;
+	// 			}
+	//
+	// 			p {
+	// 				font-size: 3.25rem;
+	// 				display: block;
+	// 				width: 45.5%;
+	// 				float: left;
+	// 				text-align: left;
+	// 				margin-top: 3em;
+	// 			}
+	// 		}
+	// 	}
+	// 	.phone-simulation {
+	//
+	// 		background: url(../img/Distance_battery.png) no-repeat;
+	// 		width: 765px;
+	// 		height: 1400px;
+	// 		background-size: cover;
+	// 		position: absolute;
+	// 		left: 0;
+  //   		top: -60px;
+	//
+	// 		.phone-content {
+	//
+	// 			background:url(../img/ar-background.png) no-repeat;
+	// 			width: 555px;
+	// 			height: 1190px;
+	// 			position: relative;
+	// 			left: 100px;
+	// 			top: 97px;
+	// 			border-radius: 53px;
+	//
+	//
+	// 			.iphone-top {
+	// 				background: url(../img/Notch-dot.png) no-repeat;
+	// 				background-size: contain;
+	// 				margin: 0 auto;
+	// 				width: 315px;
+	// 				height: 80px;
+	// 				position: absolute;
+	// 				top: -1px;
+	// 				left: 120px;
+	// 			}
+	//
+	// 			.device-title {
+	// 				font-family: @content-font;
+	// 				font-size: 120px;
+	// 				color: #FFF;
+	// 				text-transform: uppercase;
+	// 				font-weight: 900;
+	// 				left: -825px;
+	// 				top: 400px;
+	// 				position: absolute;
+	//
+	// 				&.passport {
+	// 					color: #40C4FF;
+	// 					opacity: 0;
+	// 				}
+	//
+	// 				&.keys {
+	// 					color: #FFD600;
+	// 				}
+	// 				&.wallet {
+	// 					color: #1DE9B6;
+	// 					opacity: 0;
+	// 				}
+	// 				&.cards {
+	// 					color: #EC407A;
+	// 					opacity: 0;
+	// 				}
+	// 			}
+	//
+	// 			.device-location {
+	// 				font-size: 90px;
+	// 				position: absolute;
+	//
+	// 				&.keys {
+	// 					color: rgba(252, 228, 99, 0.6);
+	// 					right: 50px;
+	// 					top: 680px;
+	// 				}
+	// 			}
+	// 		}
+	// 	}
+	// }
+
+	&-wireless-charging {
+
+		.inner-content {
+
+			.header {
+				padding-left: 9em;
+
+				h1, h2 {
+					margin: 0;
+				}
 
 				h1 {
-					font-size: 3.8rem;
-					font-family: @content-font;
+					color: @gps-text-color;
+					font-size: 3.5rem;
+				}
+
+				h2 {
+					font-size: 2rem;
+					color: @alert-info-color;
 					text-transform: uppercase;
-					font-weight: 400;
-					text-align: left;
-					padding-top: 0.39em;
-					padding-bottom: .35em;
-				}
-
-			}
-
-			.inner-content {
-				img {
-					position: absolute;
-			    top: -43em;
-			    left: 61em;
-			    width: 34em;
-				}
-
-				p {
-					font-size: 3.25rem;
-					display: block;
-					width: 45.5%;
-					float: left;
-					text-align: left;
-					margin-top: 3em;
+					font-weight: 200;
+					position: relative;
+					top: -0.5em;
 				}
 			}
 		}
-		.phone-simulation {
-
-			background: url(../img/Distance_battery.png) no-repeat;
-			width: 765px;
-			height: 1400px;
-			background-size: cover;
-			position: absolute;
-			left: 0;
-    		top: -60px;
-
-			.phone-content {
-
-				background:url(../img/ar-background.png) no-repeat;
-				width: 555px;
-				height: 1190px;
-				position: relative;
-				left: 100px;
-				top: 97px;
-				border-radius: 53px;
-
-
-				.iphone-top {
-					background: url(../img/Notch-dot.png) no-repeat;
-					background-size: contain;
-					margin: 0 auto;
-					width: 315px;
-					height: 80px;
-					position: absolute;
-					top: -1px;
-					left: 120px;
-				}
-
-				.device-title {
-					font-family: @content-font;
-					font-size: 120px;
-					color: #FFF;
-					text-transform: uppercase;
-					font-weight: 900;
-					left: -825px;
-					top: 400px;
-					position: absolute;
-
-					&.passport {
-						color: #40C4FF;
-						opacity: 0;
-					}
-
-					&.keys {
-						color: #FFD600;
-					}
-					&.wallet {
-						color: #1DE9B6;
-						opacity: 0;
-					}
-					&.cards {
-						color: #EC407A;
-						opacity: 0;
-					}
-				}
-
-				.device-location {
-					font-size: 90px;
-					position: absolute;
-
-					&.keys {
-						color: rgba(252, 228, 99, 0.6);
-						right: 50px;
-						top: 680px;
-					}
-				}
-			}
-		}
-
 	}
 
-	&-wirelesscharging {
-		background-color: black;
-
-		h1 {
-			font-size: 20rem;
-			color: @gps-text-color;
-		}
-	}
 
 	&-powerbank {
-		h1 {
-			font-size: 30rem;
-		}
+		background-color: red;
 	}
+}
 
+.wireless {
 
-
-
-
-
-
-
-
+}
 
 
 
