continued to polish styles

--- a/less/sections.less
+++ b/less/sections.less
@@ -736,18 +736,51 @@
 					top: -0.5em;
 				}
 			}
+
+			.phone-power {
+
+				img {
+					width: 100%;
+					height: auto;
+				}
+
+				.blockquote {
+					position: absolute;
+			    top: 6em;
+			    left: 23em;
+			    color: white;
+			    font-size: 2.2rem;
+			    width: 18em;
+			    height: 2e;
+			    padding: 1.2em;
+			    font-weight: 650;
+			    background-color: rgba(29, 160, 233, .7);
+				}
+			}
 		}
 	}
 
 
 	&-powerbank {
-		background-color: red;
+
+		.inner-content {
+
+			.header {
+				width: 30%;
+				color: @alert-info-color;
+				font-size: 3rem;
+
+
+				h4 {
+					text-align: center;
+					font-weight: 200;
+				}
+			}
+		}
 	}
 }
 
-.wireless {
 
-}
 
 
 
