--- a/css/main.css
+++ b/css/main.css
@@ -714,8 +714,30 @@ textarea {
   position: relative;
   top: -0.5em;
 }
-.section-powerbank {
-  background-color: red;
+.section-wireless-charging .inner-content .phone-power img {
+  width: 100%;
+  height: auto;
+}
+.section-wireless-charging .inner-content .phone-power .blockquote {
+  position: absolute;
+  top: 6em;
+  left: 23em;
+  color: white;
+  font-size: 2.2rem;
+  width: 18em;
+  height: 2e;
+  padding: 1.2em;
+  font-weight: 650;
+  background-color: rgba(29, 160, 233, 0.7);
+}
+.section-powerbank .inner-content .header {
+  width: 30%;
+  color: #78909c;
+  font-size: 3rem;
+}
+.section-powerbank .inner-content .header h4 {
+  text-align: center;
+  font-weight: 200;
 }
 .left {
   position: relative;
