--- a/less/sections.less
+++ b/less/sections.less
@@ -45,22 +45,54 @@
 
 	&-kickstarter {
 		text-align: center;
-		margin-top: 15em;
-		margin-bottom: 15em;
-		img {
-			width: 100%;
+		margin-bottom: 6.5em;
+
+		h3 {
+			color: @alert-info-color;
+			font-size: 3rem;
+		}
+
+		label {
+			font-size: 2rem;
+			text-align: left;
+		}
+
+		.Input-text {
+		  display: block;
+		  margin: auto;
+		  padding: 0.5em 1em;
+		  color: inherit;
+		  width: 35%;
+		  font-family: inherit;
+		  font-size: 1.5rem;
+		  font-weight: inherit;
+		  border: none;
+			box-shadow: 0.5px 2px 3px #888888;
+		}
+
+		.submit {
+			background-color: #FF3D00;
+			font-size: 1rem;
+			font-weight: 100;
+			margin-top: 2em;
+			padding-top: 0.7em;
+			padding-bottom: 0.7em;
+			padding-right: 2em;
+			padding-left: 2em;
+			color: white;
+			border: none;
 		}
 	}
 	//custom class added for gps styling
 	&-gps {
-		margin-bottom: 250px;
+		margin-bottom: 7em;
 
 		.inner-content {
 
 			img {
 				position: absolute;
 				width: 62em;
-				top: -50em;
+				top: -13em;
 			}
 
 			p {
@@ -72,7 +104,7 @@
 		.gps-content {
 			background-color: hsl(221, 80%, 9%);
 			text-align: right;
-			padding-right: 20em;
+			padding-right: 10em;
 			padding-top: 1em;
 			padding-bottom: 2em;
 		}
@@ -87,11 +119,11 @@
 		.gps-subtitle {
 			color: white;
 			font-family: @content-font;
-			font-size: 75px;
+			font-size: 3rem;
 			font-weight: 350;
 			margin-top: 0;
 			position: relative;
-			top: -15px;
+			top: -0.5em;
 		}
 	}
 
@@ -207,7 +239,7 @@
 	}
 
 	&-planner {
-			height: 80vw;
+			height: 60vw;
 			// margin-bottom: 10px;
 			.wide-title {
 				background: @gps-text-color;
@@ -228,7 +260,7 @@
 			.inner-content {
 				img {
 					position: absolute;
-			    top: -43em;
+			    top: -27em;
 			    left: 61em;
 			    width: 34em;
 				}
@@ -385,6 +417,7 @@
 			img {
 				position: absolute;
 				width: 49em;
+				top: -19em;
 			}
 
 			p {
@@ -440,7 +473,7 @@
 				.titles {
 					margin: auto;
 					text-align: left;
-					padding-left: 15em;
+					padding-left: 11em;
 					padding-top: 8em;
 
 					h1, h2, h3 {
@@ -565,39 +598,37 @@
 			height: auto;
 		}
 
+		h1, p {
+			margin-left: 14rem;
+		}
+
 		h1 {
 			font-weight: 150;
-			font-size: 48px;
+			font-size: 4rem;
 			margin-bottom: 0;
 		}
+
+		p {
+				color: @alert-info-color;
+				font-size: 3rem;
+				text-align: left;
+				margin-top: 0;
+			}
 
 		.info-container {
 			display: grid;
 			grid-template-columns: repeat(2, 1fr);
+			position: relative;
+			left: 5em;
+			top: -5em;
 
-			.half {
-				display: grid;
-				grid-template-columns: repeat(2, 1fr);
-
-				i {
-					font-size: 120px;
-					margin: auto 0;
-				}
-
-				.leather-words {
-					text-align: left;
-
-					p {
-						color: @alert-info-color;
-						font-size: 30px;
-						text-align: left;
-						margin: 0;
-					}
-				}
+			i {
+				position: relative;
+			  top: 1.6em;
+			  left: 0.8em;
+			  font-size: 7rem;
 			}
 		}
-
-
 	}
 
 	// &-planner {
@@ -760,7 +791,6 @@
 		}
 	}
 
-
 	&-powerbank {
 
 		.inner-content {
@@ -802,6 +832,21 @@
 					color: @alert-info-color;
 					font-weight: 200;
 					font-size: 2rem;
+				}
+			}
+		}
+	}
+
+	&-kickstarter-testimonials {
+
+		.wrapper {
+			width: 80%;
+			margin: auto;
+
+			.header {
+
+				h1 {
+					font-weight: 200;
 				}
 			}
 		}
